--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -116,7 +116,7 @@
   <li><strong>Tâche : </strong>Vous voulez faire faire une courte promenade au chien avant la pluie. Y a-t-il des endroits dans la région d’Ottawa où la pluie a déjà commencé (oui/non)?</li>
   <li><strong>Tâche : </strong>Vous dirigez la partie de soccer des enfants ce soir. Vous devez annuler l’activité si l’humidex dépasse 40 degrés. Vous l’annulez ou non?</li>
   <li><strong>Tâche : </strong>Vous êtes le gestionnaire du terrain de golf – le ciel est sombre. Déterminez (oui/non) si vous devriez évacuer le terrain en raison d’éclairs potentiels dans les 10 à 20 minutes.</li>
-  <li><strong>Tâche : </strong>Vous avez réservé une ronde de golf cet après-midi. Le terrain est à Arnprior, qui se trouve à environ 40 minutes de route à l’ouest d’Ottawa. Est-il nécessaire d’apporter un imperméable?</li>
+<!--  <li><strong>Tâche : </strong>Vous avez réservé une ronde de golf cet après-midi. Le terrain est à Arnprior, qui se trouve à environ 40 minutes de route à l’ouest d’Ottawa. Est-il nécessaire d’apporter un imperméable?</li> -->
 </ul>
 
 <figure>
@@ -177,7 +177,7 @@ Description détaillée
 
 <h2 id="">Restructuration visant à améliorer le taux de réussite des tâches</h2>
 
-<p>En ce qui concerne l’essai de référence, le taux global de repérabilité était de 67 %, et le taux global de réussite était de 52 % pour les sept tâches et les 140 essais de tâches.
+<p>En ce qui concerne l’essai de référence, le taux global de repérabilité était de 35 %, et le taux global de réussite était de 33 % pour les sept tâches et les 140 essais de tâches.
 </p>
 
 <p>Pour résoudre la longue liste de problèmes que nous avons répertoriés, l’équipe a créé un prototype fonctionnel à l’appui d’une nouvelle conception sur le site de partage de codes Github. Nous avons organisé plusieurs ateliers afin de travailler intensivement sur les problèmes rencontrés par les participants. </p>
@@ -265,7 +265,6 @@ La page « Nouvelle version » est également animée et défile jusqu’à la f
 			 <summary>
 			 Taux de réussite des tâches – tableau
 			 </summary>
-			 <p>
 				 <p>Mesure de base au début du projet, validation sur prototype restructuré par l'équipe de projet.</p>
 				 <div class="table-bravo">
 							 <table class="table table-bordered">
