--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -112,7 +112,7 @@
   <li><strong>Task:</strong> You want to take the dog for a short walk before it rains. Is already raining anywhere in the Ottawa area yet (yes/no)?</li>
   <li><strong>Task:</strong> You are coaching children's soccer tonight. You have to cancel if the humidex is above 40 degrees. Should you cancel the game or not?</li>
   <li><strong>Task:</strong> You are a golf course manager - the sky looks dark. Find out (yes/no) whether you should clear the course because of the potential of lightning in the next 10-20 minutes.</li>
-  <li><strong>Task:</strong> You are booked to golf this afternoon. The golf course is in Arnprior, about a 40 minute drive west of Ottawa. Do you need to bring a raincoat?</li>
+<!-- non measurement task  <li><strong>Task:</strong> You are booked to golf this afternoon. The golf course is in Arnprior, about a 40 minute drive west of Ottawa. Do you need to bring a raincoat?</li> -->
 </ul>
 
 <figure>
@@ -171,7 +171,7 @@ Detailed description
 
 <h2>Redesign to improve task success</h2>
 
-<p>For the baseline test, the overall findability rate was 67%, and the overall success rate was 52% across the 7 tasks and 140 task trials.</p>
+<p>For the baseline test, the overall findability rate was 35%, and the overall success rate was 33% across the 7 tasks and 140 task trials.</p>
 
 <p>To solve the long list of issues we captured, the team created a working prototype for a new design on the Github code-sharing site. We held several workshops to work intensively on issues that participants experienced.</p>
 
@@ -199,11 +199,11 @@ Video description
 </summary>
 <br>
 <p>
-Two smartphones are shown with 2 different versions of a web page. One is labelled "Before", the other "After".</p>
+Two smartphones are shown with 2 different versions of a web page. One is labelled "Baseline", the other "Redesign".</p>
 
-<p> In the "Baseline" page, the title is "Ottawa (Kanata-Orléans) ON” followed by a weather alert box in yellow with the text "Severe thunderstorm watch in effect". An arrow points to alert box with the annotation "Before: Few people realized the warning was clickable to see details about the storm”.</p>
+<p>In the "Baseline" page, the title is "Ottawa (Kanata-Orléans) ON” followed by a weather alert box in yellow with the text "Severe thunderstorm watch in effect". An arrow points to the alert box with the annotation "Baseline: Few people realized they could click the warning to see details about the storm”.</p>
 <p>
-In the "After" page, the weather alert box in yellow has been changed: there is now a small warning icon, the text is now underlined to show it can be clicked, and there is a chevron on the right. This image is animated, and the phone screen slowly scrolls up and down to show the alert is duplicated above the forecast which is lower on the page. An arrow points to alert text "After: Everyone noticed and clicked the warning - either at the top or in the forecast".</p>
+In the "Redesign" page, the weather alert box in yellow has been changed: there is now a small warning icon, the text is now underlined to show it can be clicked, and there is a chevron on the right. This image is animated, and the phone screen slowly scrolls up and down to show the alert is duplicated below the forecast which is lower on the page. An arrow points to alert text "Redesign: Everyone noticed and clicked the warning - either at the top or in the forecast".</p>
 
 
 
@@ -230,12 +230,13 @@ Video description
 </summary>
 <br>
 <p>
-Two smartphones are shown with 2 different versions of a web page. One is labelled "Before", the other "After".</p>
+Two smartphones are shown with 2 different versions of a web page. One is labelled "Baseline", the other "Redesign".</p>
 
-<p>The "Before" page is animated and scrolls to the bottom, past the Current Conditions, Forecast, Averages and Extremes, etc. The page is very long and the commonly used links, are found at the end. An arrow points list of links with the annotation "Before: Huge page to scroll. Participants didn't find important task links all the way at the bottom of the page".</p>
+<p>The "Baseline" page is animated and scrolls to the bottom, past the Current Conditions, Forecast, Averages and Extremes, etc. The page is very long and the commonly used links are found at the end. An arrow points to the list of links with the annotation "Baseline: Huge page to scroll. Participants didn't find important task links all the way at the bottom of the page".
+</p>
 
 <p>
-The "After" page is also animated, and scrolls to just underneath the Current Conditions. This part of the page has been changed so that the content is in two columns, and the button links are now easy to find. An arrow points list of links with the annotation "After: Content has been streamlined. Short page. All participants found top links next to forecast".
+The "Redesign" page is also animated, and scrolls to just underneath the Current Conditions. This part of the page has been changed so that the content is in two columns, and the links are now are easy to find. An arrow points to the list of links with the annotation "Redesign: Content has been streamlined. Short page. All participants found important links next to forecast".
 </p>
 </details>
 
@@ -258,7 +259,7 @@ The "After" page is also animated, and scrolls to just underneath the Current Co
 			 <summary>
 			  Task completion success rates – table
 			 </summary>
-			 <p>
+			 <p>Baseline measurement at start of project, validation on prototype redesigned by project team.</p>
 				 <div class="table-bravo">
 				       <table class="table table-bordered">
 
