--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -127,7 +127,7 @@
 
 <figure>
 <img class="img-responsive" alt="Des feuillets autoadhésifs manuscrits apposés au haut de la page indiquent des suggestions de conception pour améliorer les icônes. Il y a des points autoadhésifs sur le feuillet." src="../images/weather-meteo/design-suggestions.jpg" width="800px"/>
-<figcaption><small>Suggestions de conception avec points de vote</small></figcaption>
+<figcaption><small>Suggestions de conception avec points de vote (en anglais)</small></figcaption>
 <br>
 </figure>
 <details>
