--- a/pages/projectoverview-update.html
+++ b/pages/projectoverview-update.html
@@ -625,7 +625,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
             </ul>
         </div>
     </div>
-
+</div>
 
 <div id="def-preFooter">
 </div>
