--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -261,7 +261,7 @@
 
 																		<br>
 
-<p><a href="../research-summaries/meteo-resume-researche.html">Apprenez la façon dont nous l’avons fait.</a></p> 
+<p><a href="../research-summaries/meteo-resume-researche.html">Apprenez la façon dont nous l’avons fait.</a></p>
 
 																		</div>
 																		</section>
@@ -500,6 +500,7 @@
             </ul>
         </div>
     </div>
+</div>
 
 <div id="def-preFooter">
 </div>
