--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -465,8 +465,69 @@
 </details>
 
 
+<details >
+								<summary class="borderless">  <h3 class="timeline-title">Rappels et alertes de sécurité</h3> <div class="summary-custom"><div></summary>
+
+<h4>Ministères partenaire</h4>
+
+						<p>Santé Canada; Agence canadienne d'inspection des aliments; Transports Canada</p>
+
+		<h4>Objectif</h4>
+
+			<p>#</p>
+
+
+			<h4>Pourquoi ces tâches sont-elles importantes?</h4>
+
+						<ul>
+				<li class="custli">#</li>
+				</ul>
+			<br>
+
+															<div class="table-bravo">
+																												<table class="table table-slim">
+
+																												<thead><tr style=""><th scope="col">Réussite des tâches avant</th>
+																												<th scope="col" >Réussite des tâches après</th>
+																												<th scope="col">Amélioration de la réussite des tâches</th>
+
+																											</tr></thead><tbody><tr>
+																												<td class="table-smnum">52 %</td>
+																												<td class="table-smnum">86 %</td>
+																												<td><p class="improvement">+34<span class="pts"> %pts</span></p></td>
+																												</tr></tbody></table>
+
+
+							<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
+
+																												<div>
+
+																		<ul class="custul">
+																				<li class="custli">Votre fils est allergique aux oeufs. Ce soir il a subi une réaction. Trouvez si des aliments dans cette liste auraient pu être la cause de sa réaction.</li>
+																				<li class="custli">Vous avez vu un message sur Facebook qui mentionnait un rappel de rôti de boeuf. Lorsque vous ouvrez votre réfrigérateur, vous voyez que vous avez un sandwich avec cette étiquette. Risquez-vous de tomber malade si vous le mangez, ou non?</li>
+																				<li class="custli">Vous étiez sur Facebook, et vous avez cliqué sur ce rappel. En regardant votre bouteille, vous voyez que ce n'est pas la même. Le vôtre est appelé Formule Originale, avec le numéro de série 6F99322. Est-ce que celle-ci a été rappelée aussi?</li>
+																				<li class="custli">Pouvez-vous me montrer comment vous présenteriez une demande pour de l'aide du gouvernement pour que vous puissiez vous absenter du travail afin de prendre soin d'un parent malade?</li>
+																				<li class="custli">Un ami vous a donné un siège d'auto pour bébé - le modèle 2014 Britax B-SAFE 35. Que devez-vous faire?</li>
+																				<li class="custli">Votre EpiPen va bientôt expirer. Vous avez entendu dire qu'il y a des problèmes de production. Trouvez ce que vous devez faire si vous avez une réaction allergique avant d'en obtenir un nouveau.</li>
+																				<li class="custli">Vous avez acheté de la bière Stella Artois. Vous avez entendu dire qu'il y a un problème avec cette marque. Vos bouteilles ont l'étiquette suivante. Sont-elles affectées?</li>
+																				<li class="custli">Il y a des rappels en ce moment pour des jouets d'enfants que des personnes pourraient avoir acheter. Touvez et indiquez le nom du jouet qui fait l'objet d'un rappel que vous pensez être le plus inquiétant.</li>
+																				<li class="custli">Vous voulez acheter de la laitue. Vous vous souvenez d'avoir vu quelque chose disant que de la laitue avait rendu des gens malades. Quels types de laitue devez-vous éviter lors de vos achats d'aujourd'hui?</li>
+																				<li class="custli">Votre fille est allergique aux arachides. Elle a subi une réaction cet après-midi à la maison. Elle n'a mangé que les deux aliments suivants. Vérifiez si l'un ou l'autre en était la cause. Que feriez-vous?</li>
+																				<li class="custli">Vous regardez cette chaise haute sur eBay. Vérifiez s'il y a des problèmes avec cette chaise pour décider si vous allez l'acheter ou non.</li>
+
+																								</ul>
+
+																												<br>
+
+<!--			<p><a href="#">Apprenez la façon dont nous l’avons fait.</a></p> -->
+
+																												</div>
+																												</section>
+																												</div>
+</details>
+
 							<div class="details-custom soon" >
-                      <div class="borderless">  <h3 class="timeline-title-soon">Rappels et alertes de sécurité (en cours)</h3> <div></div>
+                      <div class="borderless">  <h3 class="timeline-title-soon">Trouver un emploi (en cours)</h3> <div></div>
 
 							</div>
 
