--- a/pages/projectoverview-update.html
+++ b/pages/projectoverview-update.html
@@ -473,9 +473,9 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 <details >
 								<summary class="borderless">  <h3 class="timeline-title">Recalls and safety alerts</h3> <div class="summary-custom"><div></summary>
 
-									<h4>Partner department</h4>
+									<h4>Partner departments</h4>
 
-									<p>Health Canada, Canadian Food Inspection Agency, Transport Canada</p>
+									<p>Health Canada; Canadian Food Inspection Agency; Transport Canada</p>
 
 			<h4>Objective</h4>
 
