--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -526,6 +526,62 @@
 																												</div>
 </details>
 
+<details >
+								<summary class="borderless">  <h3 class="timeline-title">Gestion des comptes d'entreprise</h3> <div class="summary-custom"><div></summary>
+
+<h4>Ministère partenaire</h4>
+
+						<p>Agence du revenu du Canada</p>
+
+		<h4>Objectif</h4>
+
+			<p>#</p>
+
+
+			<h4>Pourquoi ces tâches sont-elles importantes?</h4>
+
+						<ul>
+				<li class="custli">#</li>
+				</ul>
+			<br>
+
+															<div class="table-bravo">
+																												<table class="table table-slim">
+
+																												<thead><tr style=""><th scope="col">Réussite des tâches avant</th>
+																												<th scope="col" >Réussite des tâches après</th>
+																												<th scope="col">Amélioration de la réussite des tâches</th>
+
+																											</tr></thead><tbody><tr>
+																												<td class="table-smnum">34 %</td>
+																												<td class="table-smnum">73 %</td>
+																												<td><p class="improvement">+39<span class="pts"> %pts</span></p></td>
+																												</tr></tbody></table>
+
+
+							<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
+
+																												<div>
+
+																		<ul class="custul">
+																				<li class="custli">Vous avez commencé une petite entreprise par vous-mêmes, et sous votre propre nom. Vous savez que vous n'aurez pas à facture la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Devez-vous quand même vous inscrire avec le gouvernement fédéral à des fins de taxes?</li>
+																				<li class="custli">Vous avez récemment inscrit votre entreprise avec le gouvernement de la Nouvelle-Écosse, et vous avez reçu un numéro d'entreprise. Devez-vous obtenir un numéro d'entreprise fédéral aussi?</li>
+																				<li class="custli">Vous contemplez devenir chauffeur pour Uber. Vous avez entendu que vous devez vous inscrire avec l'Agence de revenu du Canada pour facturer et percevoir la TPS/TVH. Quelles informations devez-vous avoir en main pour compléter votre inscription de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>?</li>
+																				<li class="custli">Vous vous êtes récemment inscrit en ligne avec le gouvernement fédéral pour que vous puissiez facturer et percevoir la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Quelle information recevrez-vous pour confirmer que votre inscription est complétée?</li>
+																				<li class="custli">Vous avez été offert un emploi à temps plein, et vous n'allez plus gagner de revenu de votre entreprise pour une période de temps. Vous voulez garder votre entreprise active pour l'usage futur. Que devez-vous faire pour garder votre compte de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> actif?</li>
+																				<li class="custli">Vous opérez une entreprise à Penticton, <abbr title="Colombie-Britannique">C.-B.</abbr>, et vous devez envoyer quelques documents au centre de taxes de l'<abbr title="Agence du revenu du Canada">ARC</abbr> qui traite votre déclaration d'entreprise. Trouvez quelle adresse postale vous devez utiliser. </li>
+
+																								</ul>
+
+																												<br>
+
+<!--			<p><a href="#">Apprenez la façon dont nous l’avons fait.</a></p> -->
+
+																												</div>
+																												</section>
+																												</div>
+</details>
+
 							<div class="details-custom soon" >
                       <div class="borderless">  <h3 class="timeline-title-soon">Trouver un emploi (en cours)</h3> <div></div>
 
