--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -566,8 +566,10 @@
 																		<ul class="custul">
 																				<li class="custli">Vous avez commencé une petite entreprise par vous-mêmes, et sous votre propre nom. Vous savez que vous n'aurez pas à facture la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Devez-vous quand même vous inscrire avec le gouvernement fédéral à des fins de taxes?</li>
 																				<li class="custli">Vous avez récemment inscrit votre entreprise avec le gouvernement de la Nouvelle-Écosse, et vous avez reçu un numéro d'entreprise. Devez-vous obtenir un numéro d'entreprise fédéral aussi?</li>
-																				<li class="custli">Vous contemplez devenir chauffeur pour Uber. Vous avez entendu que vous devez vous inscrire avec l'Agence de revenu du Canada pour facturer et percevoir la TPS/TVH. Quelles informations devez-vous avoir en main pour compléter votre inscription de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>?</li>
+																				<li class="custli">Vous contemplez devenir chauffeur pour Uber. Vous avez entendu que vous devez vous inscrire avec l'Agence de revenu du Canada pour facturer et percevoir la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Quelles informations devez-vous avoir en main pour compléter votre inscription de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>?</li>
 																				<li class="custli">Vous vous êtes récemment inscrit en ligne avec le gouvernement fédéral pour que vous puissiez facturer et percevoir la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Quelle information recevrez-vous pour confirmer que votre inscription est complétée?</li>
+																				<li class="custli">Vous imprimez des t-shirts et vous les vendez localement depuis quelques années. Maintenant vous désirez les vendre aux États-Unis. Vous n'aviez pas besoin d'un numéro d'entreprise du gouvernement à présent. Avez-vous besoin d'un numéro d'entreprise Canadien pour vendre vos t-shirts aux États-Unis?</li>
+																				<li class="custli">Vous devez informer l'Agence de revenu du Canada que vous avez une nouvelle adresse d'entreprise. Veuillez s'il vous plaît me montrer où vous iriez pour mettre à jour votre adresse en ligne. </li>
 																				<li class="custli">Vous avez été offert un emploi à temps plein, et vous n'allez plus gagner de revenu de votre entreprise pour une période de temps. Vous voulez garder votre entreprise active pour l'usage futur. Que devez-vous faire pour garder votre compte de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> actif?</li>
 																				<li class="custli">Vous opérez une entreprise à Penticton, <abbr title="Colombie-Britannique">C.-B.</abbr>, et vous devez envoyer quelques documents au centre de taxes de l'<abbr title="Agence du revenu du Canada">ARC</abbr> qui traite votre déclaration d'entreprise. Trouvez quelle adresse postale vous devez utiliser. </li>
 
@@ -591,7 +593,7 @@
 
 
 								<div class="details-custom soon" >
-												<div class="borderless">  <h3 class="timeline-title-soon">Gestion des comptes d'entreprise (en cours)</h3> <div></div>
+												<div class="borderless">  <h3 class="timeline-title-soon"># (en cours)</h3> <div></div>
 
 								</div>
 
