--- a/pages/projectoverview-update.html
+++ b/pages/projectoverview-update.html
@@ -570,14 +570,14 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 																												<div>
 
 																		<ul class="custul">
-																				<li class="custli">You've set up a small business by yourself under your own name. You know you won't have to charge GST/HST. Do you still need to register with the federal government for tax purposes?</li>
+																				<li class="custli">You've set up a small business by yourself under your own name. You know you won't have to charge <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr>. Do you still need to register with the federal government for tax purposes?</li>
 																				<li class="custli">You just registered your business with the government of Nova Scotia, and you received a business number. Do you need to get a federal business number, as well?</li>
-																				<li class="custli">You're thinking of becoming an Uber driver. You've heard you have to register with the Canada Revenue Agency to collect and remit GST/HST. What pieces of information do you need to have on hand to complete your GST/HST registration?</li>
-																				<li class="custli">You have recently registered online with the federal government so that you can collect and remit GST/HST. What information will you receive to confirm that your registration is complete?</li>
-																				<li class="custli">You have been printing on t-shirts and selling them locally for a few years. Now you want to sell them in the US. You did not need a business number from the government before. Do you need a Canadian business number to sell your t-shirts in the US?</li>
+																				<li class="custli">You're thinking of becoming an Uber driver. You've heard you have to register with the Canada Revenue Agency to collect and remit <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr>. What pieces of information do you need to have on hand to complete your <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> registration?</li>
+																				<li class="custli">You have recently registered online with the federal government so that you can collect and remit <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr>. What information will you receive to confirm that your registration is complete?</li>
+																				<li class="custli">You have been printing on t-shirts and selling them locally for a few years. Now you want to sell them in the <abbr title="United States">US</abbr>. You did not need a business number from the government before. Do you need a Canadian business number to sell your t-shirts in the <abbr title="United States">US</abbr>?</li>
 																				<li class="custli">You need to let the Canada Revenue Agency know that you have a new business address. Please show me where you go to update your address information online.</li>
-																				<li class="custli">You have been offered a full-time job, and won't be earning income from your own business for a period of time. You want to keep your business active for use in the future. What do you need to do to keep your GST/HST account active?</li>
-																				<li class="custli">You operate a business in Penticton, B.C. You need to send some documents to the CRA tax centre that is processing your business return. What address should you send the documents to?</li>
+																				<li class="custli">You have been offered a full-time job, and won't be earning income from your own business for a period of time. You want to keep your business active for use in the future. What do you need to do to keep your <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> account active?</li>
+																				<li class="custli">You operate a business in Penticton, <abbr title="British-Columbia">B.C.</abbr>. You need to send some documents to the <abbr title="Canada Revenue Agency">CRA</abbr> tax centre that is processing your business return. What address should you send the documents to?</li>
 
 
 																							</ul>
