--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -593,7 +593,7 @@
 
 
 								<div class="details-custom soon" >
-												<div class="borderless">  <h3 class="timeline-title-soon"># (en cours)</h3> <div></div>
+												<div class="borderless">  <h3 class="timeline-title-soon">Se préparer à passer l’examen de citoyenneté (en cours)</h3> <div></div>
 
 								</div>
 
