--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -61,7 +61,7 @@
 
 	<p>De petits changements qui font toute la différence.</p>
 
-	<p>Parfois, les mots que nous utilisons, et la façon dont nous les organisons, font en sorte qu’il est difficile de trouver ou de comprendre les renseignements du site Canada.ca. Le Bureau de la transformation numérique du Secrétariat du Conseil du Trésor du Canada travaille sur des projets avec des ministères fédéraux afin de faciliter l’utilisation du site.</p>
+	<p>Parfois, les mots que nous utilisons, et la façon dont nous les organisons, font en sorte qu’il est difficile de trouver ou de comprendre les renseignements du site Canada.ca. Le <abbr title="Bureau de la transformation numérique">BTN</abbr> du Secrétariat du Conseil du Trésor du Canada travaille sur des projets avec des ministères fédéraux afin de faciliter l’utilisation du site.</p>
 
 	<p>Pour chaque projet, nous cocréons des prototypes, nous établissons des objectifs de facilité d’emploi et nous effectuons des tests de facilité d’emploi auprès des Canadiens. Nous posons des questions qu’ont les Canadiens à propos de services particuliers du gouvernement du Canada. Pour qu’un prototype soit lancé, il doit démontrer qu’il permet aux gens d’obtenir les bonnes réponses au moins 20 % plus facilement.</p>
 
