--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -112,7 +112,7 @@
   <li><strong>Task:</strong> You rode your bike to work. Is there more than a 50/50 chance (yes/no) you will get wet cycling home at 5:00?</li>
   <li><strong>Task:</strong> It's Sunday morning, and you need to drive to Kingston for a Monday noon meeting. Should you leave this evening, or tomorrow morning?</li>
   <li><strong>Task:</strong> You are camping, and hear a rumour around the campsite that there might be hail. Hail would rip holes in your expensive tent. Should you rush to pack up your camp site this morning or take your time this evening?</li>
-  <li><strong>Task:</strong> You want to take the dog for a short walk before it rains. Is already raining anywhere in the Ottawa area yet (yes/no)?</li>
+  <li><strong>Task:</strong> You want to take the dog for a short walk before it rains. Is it already raining anywhere in the Ottawa area yet (yes/no)?</li>
   <li><strong>Task:</strong> You are coaching children's soccer tonight. You have to cancel if the humidex is above 40 degrees. Should you cancel the game or not?</li>
   <li><strong>Task:</strong> You are a golf course manager - the sky looks dark. Find out (yes/no) whether you should clear the course because of the potential of lightning in the next 10-20 minutes.</li>
 <!-- non measurement task  <li><strong>Task:</strong> You are booked to golf this afternoon. The golf course is in Arnprior, about a 40 minute drive west of Ottawa. Do you need to bring a raincoat?</li> -->
@@ -171,7 +171,7 @@ Detailed description
 
 <h2>Establishing a baseline</h2>
 
-<p>Before making changes, we established a baseline score through moderated usability testing. 16 participants attended research sessions in Toronto, Gatineau, Montreal and Ottawa with their smartphones, a further 4 participants were tested remotely on their desktop computers. Recruitment focused on individuals who were either employed or self-employed full-time outside the home. Participants were asked to complete the 7 task scenarios on the Canada.ca website. </p>
+<p>Before making changes, we established a baseline score through moderated usability testing. 16 participants attended research sessions with their smartphones, in Toronto, Gatineau, Montreal and Ottawa. A further 4 participants were tested remotely on their desktop computers. Recruitment focused on individuals who were either employed or self-employed full-time outside the home. Participants were asked to complete the 7 task scenarios on the Canada.ca website. </p>
 
 <p>We watched videos of the testing sessions together. This helped the entire team understand the problems people had in trying to complete the tasks. We could observe and quantify behaviours and usability issues that caused task failures. We captured these observations in click paths (to understand how people moved throughout the site) and described the problems in detailed issues so we could address them during the design phase.</p>
 
@@ -181,7 +181,7 @@ Detailed description
 
 <p>To solve the long list of issues we captured, the team created a working prototype for a new design on the Github code-sharing site. We held several workshops to work intensively on issues that participants experienced.</p>
 
-<p>Throughout the design process, we tested content with people through small, informal "guerilla" sessions. These tests revealed problems with our designs that we were able to address before full-scale moderated usability testing.</p>
+<p>Throughout the design process, we tested content with people through small, informal "guerilla" sessions. These tests revealed problems with our designs that we were able to address before beginning a second round of full-scale moderated usability testing.</p>
 
 
 
@@ -209,7 +209,7 @@ Two smartphones are shown with 2 different versions of a web page. One is labell
 
 <p>In the "Baseline" page, the title is "Ottawa (Kanata-Orléans) ON” followed by a weather alert box in yellow with the text "Severe thunderstorm watch in effect". An arrow points to the alert box with the annotation "Baseline: Few people realized they could click the warning to see details about the storm”.</p>
 <p>
-In the "Redesign" page, the weather alert box in yellow has been changed: there is now a small warning icon, the text is now underlined to show it can be clicked, and there is a chevron on the right. This image is animated, and the phone screen slowly scrolls up and down to show the alert is duplicated below the forecast which is lower on the page. An arrow points to alert text "Redesign: Everyone noticed and clicked the warning - either at the top or in the forecast".</p>
+In the "Redesign" page, the weather alert box in yellow has been changed: there is now a small warning icon, the text is now underlined to show it can be clicked, and there is a chevron on the right. This image is animated, and the phone screen slowly scrolls up and down to show the alert is duplicated below the forecast which is lower on the page. An arrow points to alert text with the annotation "Redesign: Everyone noticed and clicked the warning - either at the top or in the forecast".</p>
 
 
 
@@ -242,7 +242,7 @@ Two smartphones are shown with 2 different versions of a web page. One is labell
 </p>
 
 <p>
-The "Redesign" page is also animated, and scrolls to just underneath the Current Conditions. This part of the page has been changed so that the content is in two columns, and the links are now are easy to find. An arrow points to the list of links with the annotation "Redesign: Content has been streamlined. Short page. All participants found important links next to forecast".
+The "Redesign" page is also animated, and scrolls to just underneath the Current Conditions. This part of the page has been changed so that the content is in two columns, and the links are now easy to find. An arrow points to the list of links with the annotation "Redesign: Content has been streamlined. Short page. All participants found important links next to forecast".
 </p>
 </details>
 
@@ -307,11 +307,11 @@ The "Redesign" page is also animated, and scrolls to just underneath the Current
 
 <li>Design for mobile first: less prose, more space and interaction</li>
 
-<li>Reduce layers: group tasks and sub-tasks together to improve findability: reduce layers</li>
+<li>Reduce layers: group tasks and sub-tasks together to improve findability</li>
 
-<li>Shortened breadcrumbs made important weather details more visible </li>
+<li>Shorten breadcrumbs: this made important weather details more visible </li>
 
-<li>Maximising real estate: changing alert style helped Canadians find weather alert details</li>
+<li>Maximize real estate: changing the alert style helped Canadians find weather alert details</li>
 
 <li>Bring top tasks up: don’t dilute content with tiny tasks</li>
 
@@ -320,7 +320,7 @@ The "Redesign" page is also animated, and scrolls to just underneath the Current
 
 <h2>Request the research </h2>
 
-<p>Email us at <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a> if you have questions, or would like to know more about this research.</p>
+<p>Email us at <a href="mailto:dto-btn@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a> if you have questions, or would like to know more about this research.</p>
 
 <h2> What do you think? </h2>
 
