--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -164,7 +164,7 @@ Description détaillée
 
 <h2 id="">Établissement d’une référence</h2>
 
-<p>Avant d’apporter des modifications, nous avons établi un score de référence grâce à la mise à l’essai modérée de la convivialité. Seize participants ont assisté aux séances de recherche tenues à Toronto, à Gatineau, à Montréal et à Ottawa avec leur téléphone intelligent en anglais ou en français, et des essais à distance ont été menés auprès de quatre autres participants utilisant leur ordinateur de bureau. Le recrutement était axé sur les utilisateurs qui occupaient un emploi ou des travailleurs autonomes à temps plein à l’extérieur de leur domicile. On a demandé aux participants de réaliser les sept scénarios de tâches sur le site Web Canada.ca. </p>
+<p>Avant d’apporter des modifications, nous avons établi un score de référence grâce à la mise à l’essai modérée de la convivialité. Seize participants ont assisté aux séances de recherche tenues à Toronto, à Gatineau, à Montréal et à Ottawa avec leur téléphone intelligent en anglais ou en français. Des essais à distance ont été menés auprès de quatre autres participants utilisant leur ordinateur de bureau. Le recrutement était axé sur les utilisateurs qui occupaient un emploi ou des travailleurs autonomes à temps plein à l’extérieur de leur domicile. On a demandé aux participants de réaliser les sept scénarios de tâches sur le site Web Canada.ca. </p>
 
 <p>Nous avons regardé ensemble des vidéos des séances d’essais. Ces vidéos ont aidé toute l’équipe à comprendre les problèmes rencontrés par les utilisateurs lorsqu’ils essayaient d’accomplir les tâches. Nous pourrions observer et quantifier les comportements et les problèmes de convivialité qui ont causé  l'échec de l'exécution de la tâche. Nous avons saisi ces observations sous la forme d’un parcours de clics (pour comprendre comment les gens se sont déplacés sur le site) et décrit les problèmes en détail afin que nous puissions les aborder pendant la phase de conception.</p>
 
@@ -176,7 +176,7 @@ Description détaillée
 
 <p>Pour résoudre la longue liste de problèmes que nous avons répertoriés, l’équipe a créé un prototype fonctionnel à l’appui d’une nouvelle conception sur le site de partage de codes Github. Nous avons organisé plusieurs ateliers afin de travailler intensivement sur les problèmes rencontrés par les participants. </p>
 
-<p>Tout au long du processus de conception, nous avons mis à l’essai le contenu auprès des utilisateurs au moyen de petites séances « guérilla » informelles. Ces essais ont révélé des problèmes de conception que nous avons pu régler avant la mise à l’essai modérée de la convivialité à grande échelle.</p>
+<p>Tout au long du processus de conception, nous avons mis à l’essai le contenu auprès des utilisateurs au moyen de petites séances « guérilla » informelles. Ces essais ont révélé des problèmes de conception que nous avons pu régler avant la deuxième mise à l’essai modérée de la convivialité à grande échelle.</p>
 
 
 <h3>Conception d’alertes avant et après la nouvelle conception mobile aux fins de validation</h3>
@@ -203,7 +203,7 @@ Deux téléphones intelligents affichent deux versions différentes d’une page
 
 <p>À la page « Version de base  », le titre est « Ottawa (Kanata-Orléans), ON », suivi d’une boîte d’alerte météo en jaune avec le texte « Veille d’orages violents ». Une flèche pointe vers la boîte d’alerte avec l’annotation « Version de base : Peu de gens se rendaient compte qu’ils pouvaient cliquer sur l’avertissement pour voir les détails de la tempête. »</p>
 <p>
-	À la page « Nouvelle version », la boîte d’alerte météo en jaune a été modifiée; il y a maintenant une petite icône d’avertissement, le texte est souligné pour montrer qu’il est possible de cliquer sur celui-ci, et il y a un chevron à droite. Cette image est animée, et l’écran du téléphone défile lentement vers le haut et vers le bas pour montrer que l’alerte apparaît aussi sous les prévisions, qui se trouvent plus bas sur la page. Une flèche pointe vers le texte d’alerte « Nouvelle version : Tout le monde a remarqué l’avertissement et a cliqué sur celui-ci en haut ou en bas des prévisions. »
+	À la page « Nouvelle version », la boîte d’alerte météo en jaune a été modifiée; il y a maintenant une petite icône d’avertissement, le texte est souligné pour montrer qu’il est possible de cliquer sur celui-ci, et il y a un chevron à droite. Cette image est animée, et l’écran du téléphone défile lentement vers le haut et vers le bas pour montrer que l’alerte apparaît aussi sous les prévisions, qui se trouvent plus bas sur la page. Une flèche pointe vers le texte d’alerte avec l’annotation « Nouvelle version : Tout le monde a remarqué l’avertissement et a cliqué sur celui-ci en haut ou en bas des prévisions. »
 </p>
 
 
@@ -303,7 +303,7 @@ La page « Nouvelle version » est également animée et défile jusqu’à la f
 
 <li>Diminution du nombre de paliers : regroupement des tâches et des sous-tâches afin d’améliorer la repérabilité : diminution du nombre de paliers</li>
 
-<li>Raccourcissement de la piste de navigation augmentant la visibilité des détails météorologiques importants</li>
+<li>Raccourcissement de la piste de navigation : augmentation de la visibilité des détails météorologiques importants</li>
 
 <li>Maximisation de la surface occupée : les modifications apportées au style d’alerte ont aidé les Canadiens à trouver les détails des alertes météorologiques</li>
 
@@ -314,7 +314,7 @@ La page « Nouvelle version » est également animée et défile jusqu’à la f
 
 <h2> Demander les résultats de recherche </h2>
 
-<p>Communiquez avec nous à l’adresse <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a> si vous avez des questions ou si vous souhaitez en savoir plus sur cette recherche.</p>
+<p>Communiquez avec nous à l’adresse <a href="mailto:dto-btn@tbs-sct.gc.ca">dto-btn@tbs-sct.gc.ca</a> si vous avez des questions ou si vous souhaitez en savoir plus sur cette recherche.</p>
 
 <h2>Qu’en pensez-vous? </h2>
 
