--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -320,7 +320,7 @@ The "Redesign" page is also animated, and scrolls to just underneath the Current
 
 <h2>Request the research </h2>
 
-<p>Email us at <a href="mailto:dto-btn@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a> if you have questions, or would like to know more about this research.</p>
+<p>Email us at <a href="mailto:dto-btn@tbs-sct.gc.ca">dto-btn@tbs-sct.gc.ca</a> if you have questions, or would like to know more about this research.</p>
 
 <h2> What do you think? </h2>
 
