hide chart on mobile

--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -249,7 +249,7 @@ La page « Nouvelle version » est également animée et défile jusqu’à la f
 <p>Ce graphique montre les taux de réussite de l’exécution de la tâche dans l’ensemble de la référence et de la mise à l’essai de validation remanié du prototype pour l’ensemble des 40 participants :</p>
 
 <div itemprop="text" class="" data="type-text">
-      <div class="img-responsive center-block">
+      <div class="img-responsive center-block hidden-sm hidden-xs">
           <span class=""><img src="../images/weather-meteo/Baseline_vs_Validation_Success_resultats.jpg" alt="graphique qui illustre les résultats de la base de référence et de la restructuration" width="800px" />
        </span>
 
