--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -255,7 +255,7 @@ The "Redesign" page is also animated, and scrolls to just underneath the Current
 <p>This chart shows the task completion success rates across the baseline and redesigned validation test on the prototype for all 40 participants:</p>
 
 <div itemprop="text" class="" data="type-text">
-      <div class="img-responsive center-block">
+      <div class="img-responsive center-block hidden-sm hidden-xs">
           <span class=""><img src="../images/weather-meteo/Baseline_vs_Validation_Success_results.jpg" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
        </span>
 
